plugins {
	id 'java-library'
	id('com.diffplug.spotless').version('6.23.3')
}


repositories {
	mavenCentral()
}


group = "lost.java"
version = "0.0.1"


dependencies {
	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}


tasks.withType(JavaCompile).configureEach {
	it.options.compilerArgs += ["--enable-preview"]
}

tasks.withType(JavaExec).configureEach {
	it.jvmArgs += ["--enable-preview"]
}

tasks.withType(Test).configureEach {

	useJUnitPlatform()
	it.jvmArgs += ["--enable-preview"]
}


spotless {
	java {
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
		removeUnusedImports()
		trimTrailingWhitespace()
	}

	groovyGradle {
		greclipse()
	}
}